Fixed typo in dc2019_myths

--- a/_posts/2019-12-20-dc2019_myths.md
+++ b/_posts/2019-12-20-dc2019_myths.md
@@ -6,7 +6,7 @@ categories:
   - District Council 2019
 ---
 
-註：章同時轉載於 [關鍵評論網 The News Lens](https://www.thenewslens.com/article/128985?fbclid=IwAR1AxqOlDkv0C9CcUWyrFHiG-Xx4SyLjRntU2_0_EzuMLjeL1MEs7uTIOy0)
+註：文章同時轉載於 [關鍵評論網 The News Lens](https://www.thenewslens.com/article/128985?fbclid=IwAR1AxqOlDkv0C9CcUWyrFHiG-Xx4SyLjRntU2_0_EzuMLjeL1MEs7uTIOy0)
 
 建制派在區議會選舉海嘯式潰敗，令市民舒一口悶氣。手足的文宣厲害，將戰果描繪得振奮人心，不過熟悉選舉數據的人會觀察到不少過於樂觀的幻想。以下借用四百多個選區的點票統計為這些迷思提供答案，希望支持民主的人士不要沉醉於剎那的勝利之中，慎防自我催眠，因為明年立法會直選是一場難打的仗。
 
